[package]
name = "examples"
edition = "2021"
publish = false

[dependencies]
bincode = { workspace = true }
jito-protos = { path = "../jito_protos" }
solana-entry = { workspace = true }
solana-sdk = { workspace = true }
tokio = { version = "1", features = ["full"] }

[[example]]
name = "deshred"
path = "deshred.rs"